# Nightbloom_Editor

./: CMakeLists.txt  GenerateEditor.bat  LICENSE
Shaders/: Mesh.frag  Mesh.frag.spv  Mesh.vert  Mesh.vert.spv  MultiplyByTwo.comp  NodeGenerated.frag  NodeGenerated.vert  Shadow.frag  Shadow.vert  noise_generate.comp  test_compute.comp  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
Shaders/Backup/New/: Mesh.frag  Mesh.vert
Shaders/Backup/Old/: Mesh.frag  Mesh.vert
Source/: EditorApp.cpp  EditorFileUtils.cpp  EditorFileUtils.hpp  Main.cpp
Source/Tools/ShaderEditor/: ShaderNode.cpp  ShaderNode.hpp  ShaderNodeEditor.cpp  ShaderNodeEditor.hpp
